--- a/src/component/gym web/gym.css
+++ b/src/component/gym web/gym.css
@@ -14,7 +14,7 @@
     align-items: center;
 }
 body {
-    background-image: url('C:\react-gym\second-app\src\component\gym web\images\forgotten-exercises.jpg');
+    background-image: url('C:\react-gym\second-app\src\component\gym web\images\back1.jpg');
     background-size:cover;
     background-repeat: no-repeat;
 }
